fix spacing issue with dashboard

--- a/public/admin/css/dashboard.css
+++ b/public/admin/css/dashboard.css
@@ -17,7 +17,7 @@
 body {
   position: relative;
   margin: var(--header-height) 0 0 0;
-  padding: 0 1rem;
+  /* padding: 0 1rem; */
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
   transition: 0.5s;
@@ -261,7 +261,7 @@ li{
 @media screen and (min-width: 768px) {
   body {
     margin: calc(var(--header-height) + 1rem) 0 0 0;
-    padding-left: calc(var(--nav-width) + 2rem);
+    padding-left: calc(var(--nav-width));
   }
   .header {
     height: calc(var(--header-height) + 1rem);
